@startuml

left to right direction

class ChefkochRecipeFetcher {
  +getRecipe(url: String): Recipe
  -extractRecipeName(content: String): String
  -extractIngredients(content: String): GroceryList
  -extractRecipeSteps(content: String): List<RecipeStep>
}

class WebsiteFetcher {
  +getWebsiteBody(urlString: String): String
}

class Recipe {
  // fields and methods
}

class GroceryList {
  // fields and methods
}

class RecipeStep {
  // fields and methods
}

WebsiteFetcher <-- ChefkochRecipeFetcher
Recipe <-- ChefkochRecipeFetcher
GroceryList <-- ChefkochRecipeFetcher
RecipeStep <-- ChefkochRecipeFetcher

@enduml
